# opengl-tuto

./: .gitignore  CMakeLists.txt  README.md
src/: window.cpp
src/helloTriangle/: helloTriangle.cpp
